# Homemind

./: agent.py  app.py  pyproject.toml
homemind/: agent.py  app.py  graph.py  utils.py
homemind/tools/: DataTool.py  TempTool.py  ToolController.py
scripts/: run_streamlit.py
src/: agent.py  app.py
src/tools/: do_math.py  get_humid_tool.py  get_temp_tool.py
